--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,8 +1,13 @@
 <br>
 <h2 style = "font-weight:bold">Products</h2>
 <div *ngFor= "let product of productsInside">
-  <span>{{product.id}}</span><br>
-  {{product.name}}<br>
-  {{product.price}}<br>
-  {{product.description}}<br><br>
+  <a [title] = "product.name + ' details'">
+  <h3>{{product.name}}</h3>
+  </a>
+  <p *ngIf = "product.description">
+    Description : {{product.description}}
+  </p>
+  <button (click) = "share()" >
+    Share
+  </button>
 </div>
